welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: 'case' expected but 'false' found.
		{false => if (a<=0 && b<=0) {return true} return false
                 ^posNeg:4: error: '}' expected but ';' found.
		true   => if ((a<=0 && b>=0) || (a>=0 && b<=0)) {return true} return false}
^posNeg:4: error: not a legal formal parameter
		true   => if ((a<=0 && b>=0) || (a>=0 && b<=0)) {return true} return false}
                ^posNeg:4: error: ';' expected but 'return' found.
		true   => if ((a<=0 && b>=0) || (a>=0 && b<=0)) {return true} return false}
                                                                              ^posNeg:6: error: eof expected but '}' found.
 }
 ^