welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
	negative match
		{false => if (a<=0 && b<=0) {return true} return false
		true   => if ((a<=0 && b>=0) || (a>=0 && b<=0)) {return true} return false}
}